<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/app_theme"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        android:tint="#940066FF"/>

    <TextView
        android:id="@+id/accountDetails3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/app_theme"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40218878" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/app_theme" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/sim_nstudent_portal"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
        app:layout_constraintVertical_bias="0.64" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:strokeColor="#00FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/accountDetails4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/login_now"
                android:textColor="@color/app_theme"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/accountDetails2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/enter_your_credentials_to_proceed"
                android:textColor="@color/material_dynamic_neutral60"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toBottomOf="@+id/accountDetails4" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/baseline_numbers_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/app_theme"
                android:ems="10"
                android:fontFamily="@font/montserrat_light"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:padding="8dp"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountDetails2" />


            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/app_theme"
                android:ems="10"
                android:fontFamily="@font/montserrat_light"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/forgot_password"
                android:textColor="@color/app_theme"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                android:fontFamily="@font/montserrat_extralight"
                android:gravity="center"
                android:text="@string/this_information_will_be_securely_saved_as_per_the_terms_of_services_and_privacy_policy"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/app_theme"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/login"
                android:textSize="20sp"
                app:cornerRadius="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password"
                app:layout_constraintVertical_bias="0.258" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="1dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:fontFamily="@font/montserrat"
                    android:onClick="onClick"
                    android:text="@string/register"
                    android:textColor="@color/app_theme" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/remember_me"
                app:layout_constraintStart_toStartOf="@+id/pass"
                app:layout_constraintTop_toBottomOf="@+id/pass" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>